Tue May 29 15:06:48 2001  Ossama Othman  <ossama@uci.edu>

	* include/makeinclude/platform_linux.GNU (CFLAGS, CPPFLAGS):

	  Do not set preprocessor flags in the "CFLAGS" variable.  They
	  should instead be set in the CPPFLAGS variable.  The
	  preprocessor need not be the same as the compiler!

Mon May 28 18:11:20 2001  Douglas C. Schmidt  <schmidt@enz.cs.wustl.edu>

	* ace/OS.i (mutex_init): Using pthreads and passing attributes
	  into mutex_init(), the function will always fail because the
 	  local variable result is initialized to -1 and then tested
 	  against 0.  Thanks to Brodie Thiesfield
 	  <brodie.thiesfield@activesky.com> for this fix.

Tue May 29 13:08:33 2001  Phil Mesnier  <mesnier_p@ociweb.com>

	* ace/Process.i (handle_inheritence):
	* ace/Process.h:

	Exposed the interface for handle_inheritence to non-win32 builds to
	allow it to be used as part of the solution to bug 902. Since this is
	a win32 only feature, the method will invoke the NOTSUP macro to
	document its use, but failure is benign, returning 0. This is part 3
	of the 3 part solution to bug 902.

Mon May 28 18:43:51 2001  Steve Huston  <shuston@riverace.com>

        * tests/Thread_Pool_Reactor_Resume_Test.icc: Visual Age C++ config
          for this new test.

        * tests/tests.icp: Added Thread_Pool_Reactor_Resume_Test.icc.

        * include/makeinclude/platform_aix_ibm.GNU: Added $(ACELIB) to
          LIBS to get netsvcs stuff to build clean. Thanks to Erik
          Toubro Nielsen <enielsen@mdsproteomics.dk> for this fix.

        * THANKS: Added Erik Nielsen.

Mon May 28 14:44:29 2001  Steve Huston  <shuston@riverace.com>

        * ace/Timer_Heap_T.{h cpp}: Add new member, cur_limbo_ to keep track
          of timer entries removed from the heap, but not reclaimed (caller
          must call either reschedule() or free_node() to finish up the
          work).

        * ace/Timer_Queue_T.cpp (expire): When expiring a ACE_Timer_Node,